--- a/bookmarks.html
+++ b/bookmarks.html
@@ -3,19 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="/styles/bookmarks.css" />
     <title>Quiz App</title>
-    <script src="./index.js" defer></script>
   </head>
   <body>
-    <header><h1>Quiz App</h1></header>
+    <header><h1>Quiz App - Bookmarks</h1></header>
     <main>
       <article class="question-container">
-        <img
-          class="bookmark"
-          src="../assets/bookmark-white.png"
-          data-js="bookmark"
-        />
+        <img class="bookmark" src="../assets/bookmark-black.png" />
         <div class="question-box">
           <h2 class="question-txt">A Question</h2>
           <div class="choice-container">
@@ -26,9 +21,9 @@
           <p class="answer-txt">An Answer</p>
         </div>
         <div class="catergory-container">
-          <p class="category-txt">#1 Category</p>
-          <p class="category-txt">#2 Category</p>
-          <p class="category-txt">#3 Category</p>
+          <p>#1Category</p>
+          <p>#2Category</p>
+          <p>#3Category</p>
         </div>
       </article>
     </main>
@@ -36,31 +31,30 @@
       <nav>
         <ul class="menu">
           <li>
-            <a href="#" title="Home">
+            <a href="/index.html" title="Home">
               <img
                 class="menu-icon"
-                src="../assets/home-black.png"
+                src="../assets/home-white.png"
                 alt="Home"
               />
             </a>
           </li>
           <li>
-            <a href="../bookmarks/bookmarks.html" title="Bookmarks">
+            <a href="#" title="Bookmarks">
               <img
                 class="menu-icon"
-                src="../assets/bookmark-white.png"
+                src="../assets/bookmark-black.png"
                 alt="Bookmarks"
               />
             </a>
           </li>
           <li>
-            <a href="../form/form.html" title="add">
+            <a href="./form.html" title="add">
               <img class="menu-icon" src="../assets/add-white.png" alt="add" />
             </a>
           </li>
-
           <li>
-            <a href="../profil/profil.html" title="User Profile">
+            <a href="./profile.html" title="User Profile">
               <img
                 class="menu-icon"
                 src="../assets/user-white.png"
