--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="bookmarks.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <title>Quiz App</title>
+    <script src="./scripts/index.js" defer></script>
   </head>
   <body>
-    <header><h1>Quiz App - Bookmarks</h1></header>
+    <header><h1>Quiz App</h1></header>
     <main>
       <article class="question-container">
-        <img class="bookmark" src="../assets/bookmark-black.png" />
+        <img
+          class="bookmark"
+          src="../assets/bookmark-white.png"
+          data-js="bookmark"
+        />
         <div class="question-box">
           <h2 class="question-txt">A Question</h2>
           <div class="choice-container">
@@ -21,9 +26,9 @@
           <p class="answer-txt">An Answer</p>
         </div>
         <div class="catergory-container">
-          <p>#1Category</p>
-          <p>#2Category</p>
-          <p>#3Category</p>
+          <p class="category-txt">#1 Category</p>
+          <p class="category-txt">#2 Category</p>
+          <p class="category-txt">#3 Category</p>
         </div>
       </article>
     </main>
@@ -31,30 +36,31 @@
       <nav>
         <ul class="menu">
           <li>
-            <a href="../home/index.html" title="Home">
+            <a href="#" title="Home">
               <img
                 class="menu-icon"
-                src="../assets/home-white.png"
+                src="../assets/home-black.png"
                 alt="Home"
               />
             </a>
           </li>
           <li>
-            <a href="../bookmarks/bookmarks.html" title="Bookmarks">
+            <a href="./bookmarks.html" title="Bookmarks">
               <img
                 class="menu-icon"
-                src="../assets/bookmark-black.png"
+                src="../assets/bookmark-white.png"
                 alt="Bookmarks"
               />
             </a>
           </li>
           <li>
-            <a href="../form/form.html" title="add">
+            <a href="./form.html" title="add">
               <img class="menu-icon" src="../assets/add-white.png" alt="add" />
             </a>
           </li>
+
           <li>
-            <a href="../profile/profile.html" title="User Profile">
+            <a href="./profile.html" title="User Profile">
               <img
                 class="menu-icon"
                 src="../assets/user-white.png"
