--- a/form.html
+++ b/form.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../form/form.css" />
+    <link rel="stylesheet" href="../styles/form.css" />
     <title>Quiz App</title>
-    <script src="../js/form.js" defer></script>
   </head>
   <body>
     <header><h1>Quiz App - Form</h1></header>
@@ -20,7 +19,7 @@
       <nav>
         <ul class="menu">
           <li>
-            <a href="../home/index.html" title="Home">
+            <a href="/index.html" title="Home">
               <img
                 class="menu-icon"
                 src="../assets/home-white.png"
@@ -29,7 +28,7 @@
             </a>
           </li>
           <li>
-            <a href="../bookmarks/bookmarks.html" title="Bookmarks">
+            <a href="./bookmarks.html" title="Bookmarks">
               <img
                 class="menu-icon"
                 src="../assets/bookmark-white.png"
@@ -43,7 +42,7 @@
             </a>
           </li>
           <li>
-            <a href="../profile/profile.html" title="User Profile">
+            <a href="./profile.html" title="User Profile">
               <img
                 class="menu-icon"
                 src="../assets/user-white.png"
