--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/profile/profile.css" />
+    <link rel="stylesheet" href="../styles/profile.css" />
     <title>Quiz App</title>
   </head>
   <body>
@@ -48,7 +48,7 @@
       <nav>
         <ul class="menu">
           <li>
-            <a href="../home/index.html" title="Home">
+            <a href="/index.html" title="Home">
               <img
                 class="menu-icon"
                 src="../assets/home-white.png"
@@ -57,7 +57,7 @@
             </a>
           </li>
           <li>
-            <a href="../bookmarks/bookmarks.html" title="Bookmarks">
+            <a href="./bookmarks.html" title="Bookmarks">
               <img
                 class="menu-icon"
                 src="../assets/bookmark-white.png"
@@ -66,7 +66,7 @@
             </a>
           </li>
           <li>
-            <a href="../form/form.html" title="add">
+            <a href="./form.html" title="add">
               <img class="menu-icon" src="../assets/add-white.png" alt="add" />
             </a>
           </li>
