--- a/form.html
+++ b/form.html
@@ -13,6 +13,41 @@
       <form>
         <label>Your Question</label>
         <textarea id="question"></textarea>
+        <p>Answer's Options:</p>
+        <label for="option1">Option 1</label>
+        <input type="text" id="option1" placeholder="Your first option" />
+        <label for="option2">Option 2</label>
+        <input type="text" id="option2" placeholder="Your second option" />
+        <label for="option3">Option 3</label>
+        <input type="text" id="option3" placeholder="Your third option" />
+        <p>The right Answer is:</p>
+        <input type="radio" id="answer1" />
+        <label for="answer1">Answer 1</label>
+        <input type="radio" id="answer2" />
+        <label for="answer2">Answer 2</label>
+        <input type="radio" id="answer3" />
+        <label for="answer3">Answer 3</label>
+        <p>Click on 3 Categories</p>
+        <input type="checkbox" id="music" />
+        <label for="music">Music</label>
+        <input type="checkbox" id="movie" />
+        <label for="movie">Movie</label>
+        <input type="checkbox" id="history" />
+        <label for="history">History</label>
+        <input type="checkbox" id="science" />
+        <label for="science">Science</label>
+        <input type="checkbox" id="literature" />
+        <label for="literature">Literature</label>
+        <input type="checkbox" id="geography" />
+        <label for="geography">Geography</label>
+        <input type="checkbox" id="sport" />
+        <label for="sport">Sport</label>
+        <input type="checkbox" id="technology" />
+        <label for="technology">Technology</label>
+        <input type="checkbox" id="art" />
+        <label for="art">Art</label>
+        <input type="checkbox" id="pop" />
+        <label for="pop">Pop Culture</label>
       </form>
     </main>
     <footer>
