add input names

--- a/form.html
+++ b/form.html
@@ -46,25 +46,25 @@
         <input type="radio" id="answer3" name="rightanswer" />
         <label for="answer">Answer 3</label>
         <p>Click on 3 Categories</p>
-        <input type="checkbox" id="music" />
+        <input type="checkbox" id="music" name="music" />
         <label for="music">Music</label>
-        <input type="checkbox" id="movie" />
+        <input type="checkbox" id="movie" name="movie" />
         <label for="movie">Movie</label>
-        <input type="checkbox" id="history" />
+        <input type="checkbox" id="history" name="history" />
         <label for="history">History</label>
-        <input type="checkbox" id="science" />
+        <input type="checkbox" id="science" name="science" />
         <label for="science">Science</label>
-        <input type="checkbox" id="literature" />
+        <input type="checkbox" id="literature" name="literature" />
         <label for="literature">Literature</label>
-        <input type="checkbox" id="geography" />
+        <input type="checkbox" id="geography" name="geography" />
         <label for="geography">Geography</label>
-        <input type="checkbox" id="sport" />
+        <input type="checkbox" id="sport" name="sport" />
         <label for="sport">Sport</label>
-        <input type="checkbox" id="technology" />
+        <input type="checkbox" id="technology" name="technology" />
         <label for="technology">Technology</label>
-        <input type="checkbox" id="art" />
+        <input type="checkbox" id="art" name="art" />
         <label for="art">Art</label>
-        <input type="checkbox" id="pop" />
+        <input type="checkbox" id="pop" name="pop" />
         <label for="pop">Pop Culture</label>
         <button type="submit">Submit</button>
       </form>
