--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
       <form>
         <label>Your Question</label>
         <textarea id="question"></textarea>
-        <p>Answer's Options:</p>
+        <h2>Answer's Options:</h2>
         <label for="option1">Option 1</label>
         <input
           type="text"
@@ -38,14 +38,14 @@
           size="50"
           required
         />
-        <p>The right Answer is:</p>
+        <h2>The right Answer is:</h2>
         <input type="radio" id="answer1" name="rightanswer" />
         <label for="answer">Answer 1</label>
         <input type="radio" id="answer2" name="rightanswer" />
         <label for="answer">Answer 2</label>
         <input type="radio" id="answer3" name="rightanswer" />
         <label for="answer">Answer 3</label>
-        <p>Click on 3 Categories</p>
+        <h2>Click on 3 Categories</h2>
         <input type="checkbox" id="music" name="music" />
         <label for="music">Music</label>
         <input type="checkbox" id="movie" name="movie" />
