--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
             <p class="choice2">2. Choice</p>
             <p class="choice3">3. Choice</p>
           </div>
-          <p class="answer-txt">An Answer</p>
+          <p class="answer-txt-unvisible" data-js="answer-txt">An Answer</p>
+          <button type="button" data-js="answer-button">
+            Reveal the Answer
+          </button>
         </div>
+
         <div class="catergory-container">
           <p class="category-txt">#1 Category</p>
           <p class="category-txt">#2 Category</p>
