update name category

--- a/form.html
+++ b/form.html
@@ -54,40 +54,40 @@
         <!-- Categories -->
         <legend max="3">Click on 3 Categories</legend>
         <p>Max. 3 Categories</p>
-        <input type="checkbox" id="music" name="category[]" value="music" />
+        <input type="checkbox" id="music" name="category" value="music" />
         <label for="music">Music</label>
-        <input type="checkbox" id="movie" name="category[]" value="movie" />
+        <input type="checkbox" id="movie" name="category" value="movie" />
         <label for="movie">Movie</label>
-        <input type="checkbox" id="history" name="category[]" value="history" />
+        <input type="checkbox" id="history" name="category" value="history" />
         <label for="history">History</label>
-        <input type="checkbox" id="science" name="category[]" value="science" />
+        <input type="checkbox" id="science" name="category" value="science" />
         <label for="science">Science</label>
         <input
           type="checkbox"
           id="literature"
-          name="category[]"
+          name="category"
           value="literature"
         />
         <label for="literature">Literature</label>
         <input
           type="checkbox"
           id="geography"
-          name="category[]"
+          name="category"
           value="geography"
         />
         <label for="geography">Geography</label>
-        <input type="checkbox" id="sport" name="category[]" value="sport" />
+        <input type="checkbox" id="sport" name="category" value="sport" />
         <label for="sport">Sport</label>
         <input
           type="checkbox"
           id="technology"
-          name="category[]"
+          name="category"
           value="technology"
         />
         <label for="technology">Technology</label>
-        <input type="checkbox" id="art" name="category[]" value="art" />
+        <input type="checkbox" id="art" name="category" value="art" />
         <label for="art">Art</label>
-        <input type="checkbox" id="pop" name="category[]" value="pop" />
+        <input type="checkbox" id="pop" name="category" value="pop" />
         <label for="pop">Pop Culture</label>
         <button type="submit">Submit</button>
       </form>
