New Folder Structure

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -34,7 +34,7 @@
             <a href="/index.html" title="Home">
               <img
                 class="menu-icon"
-                src="../assets/home-white.png"
+                src="public/assets/icons/add-white.png"
                 alt="Home"
               />
             </a>
@@ -43,21 +43,25 @@
             <a href="#" title="Bookmarks">
               <img
                 class="menu-icon"
-                src="../assets/bookmark-black.png"
+                src="public/assets/icons/bookmark-black.png"
                 alt="Bookmarks"
               />
             </a>
           </li>
           <li>
             <a href="./form.html" title="add">
-              <img class="menu-icon" src="../assets/add-white.png" alt="add" />
+              <img
+                class="menu-icon"
+                src="public/assets/icons/add-white.png"
+                alt="add"
+              />
             </a>
           </li>
           <li>
             <a href="./profile.html" title="User Profile">
               <img
                 class="menu-icon"
-                src="../assets/user-white.png"
+                src="public/assets/icons/user-white.png"
                 alt="User Profile"
               />
             </a>
