--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
     <header><h1>Quiz App - User Page</h1></header>
     <main>
       <div class="user-header">
-        <img class="profil-img" src="../assets/user-black.png" />
+        <img class="profil-img" src="public/assets/icons/user-black.png" />
         <h2>User Name</h2>
       </div>
       <div class="user-description">
@@ -51,7 +51,7 @@
             <a href="/index.html" title="Home">
               <img
                 class="menu-icon"
-                src="../assets/home-white.png"
+                src="public/assets/icons/home-white.png"
                 alt="Home"
               />
             </a>
@@ -60,21 +60,25 @@
             <a href="./bookmarks.html" title="Bookmarks">
               <img
                 class="menu-icon"
-                src="../assets/bookmark-white.png"
+                src="public/assets/icons/bookmark-white.png"
                 alt="Bookmarks"
               />
             </a>
           </li>
           <li>
             <a href="./form.html" title="add">
-              <img class="menu-icon" src="../assets/add-white.png" alt="add" />
+              <img
+                class="menu-icon"
+                src="public/assets/icons/add-white.png"
+                alt="add"
+              />
             </a>
           </li>
           <li>
             <a href="#" title="User Profile">
               <img
                 class="menu-icon"
-                src="../assets/user-black.png"
+                src="public/assets/icons/user-black.png"
                 alt="User Profile"
               />
             </a>
