--- a/form.html
+++ b/form.html
@@ -99,7 +99,7 @@
             <a href="/index.html" title="Home">
               <img
                 class="menu-icon"
-                src="../assets/home-white.png"
+                src="public/assets/icons/home-white.png"
                 alt="Home"
               />
             </a>
@@ -108,21 +108,25 @@
             <a href="./bookmarks.html" title="Bookmarks">
               <img
                 class="menu-icon"
-                src="../assets/bookmark-white.png"
+                src="public/assets/icons/bookmark-white.png"
                 alt="Bookmarks"
               />
             </a>
           </li>
           <li>
             <a href="#" title="add">
-              <img class="menu-icon" src="../assets/add-black.png" alt="add" />
+              <img
+                class="menu-icon"
+                src="public/assets/icons/add-black.png"
+                alt="add"
+              />
             </a>
           </li>
           <li>
             <a href="./profile.html" title="User Profile">
               <img
                 class="menu-icon"
-                src="../assets/user-white.png"
+                src="public/assets/icons/user-white.png"
                 alt="User Profile"
               />
             </a>
