--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./styles/home.css" />
     <title>Quiz App</title>
     <script src="./scripts/index.js" type="module"></script>
   </head>
@@ -11,31 +11,7 @@
     <header><h1>Quiz App</h1></header>
     <main>
       <div class="all-questions-container" data-js="all-questions-container">
-        <article class="question-container">
-          <img
-            class="bookmark"
-            src="../assets/bookmark-white.png"
-            data-js="bookmark"
-          />
-          <div class="question-box">
-            <h2 class="question-txt">A Question</h2>
-            <div class="choice-container">
-              <p class="choice">1. Choice</p>
-              <p class="choice">2. Choice</p>
-              <p class="choice">3. Choice</p>
-            </div>
-            <p class="answer-txt-unvisible" data-js="answer-txt">An Answer</p>
-            <button type="button" data-js="answer-button">
-              Reveal the Answer
-            </button>
-          </div>
-
-          <div class="category-container">
-            <p class="category-txt">#1 Category</p>
-            <p class="category-txt">#2 Category</p>
-            <p class="category-txt">#3 Category</p>
-          </div>
-        </article>
+        <article class="question-container"></article>
       </div>
     </main>
     <footer>
@@ -45,7 +21,7 @@
             <a href="#" title="Home">
               <img
                 class="menu-icon"
-                src="../assets/home-black.png"
+                src="public/assets/icons/bookmark-black.png"
                 alt="Home"
               />
             </a>
@@ -54,14 +30,18 @@
             <a href="./bookmarks.html" title="Bookmarks">
               <img
                 class="menu-icon"
-                src="../assets/bookmark-white.png"
+                src="public/assets/icons/bookmark-white.png"
                 alt="Bookmarks"
               />
             </a>
           </li>
           <li>
             <a href="./form.html" title="add">
-              <img class="menu-icon" src="../assets/add-white.png" alt="add" />
+              <img
+                class="menu-icon"
+                src="public/assets/icons/add-white.png"
+                alt="add"
+              />
             </a>
           </li>
 
@@ -69,7 +49,7 @@
             <a href="./profile.html" title="User Profile">
               <img
                 class="menu-icon"
-                src="../assets/user-white.png"
+                src="public/assets/icons/user-white.png"
                 alt="User Profile"
               />
             </a>
