--- a/profile.html
+++ b/profile.html
@@ -25,11 +25,14 @@
         </p>
         <div class="counters-container">
           <div class="counter-box">
-            <img class="counter-icon" src="../assets/question.png" />
+            <img class="counter-icon" src="public/assets/icons/question.png" />
             <p>12</p>
           </div>
           <div class="counter-box">
-            <img class="counter-icon" src="../assets/bookmark-black.png" />
+            <img
+              class="counter-icon"
+              src="public/assets/icons/bookmark-black.png"
+            />
             <p>8</p>
           </div>
         </div>
