--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/home.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <title>Quiz App</title>
     <script src="./scripts/index.js" type="module"></script>
   </head>
@@ -11,7 +11,31 @@
     <header><h1>Quiz App</h1></header>
     <main>
       <div class="all-questions-container" data-js="all-questions-container">
-        <article class="question-container"></article>
+        <article class="question-container">
+          <img
+            class="bookmark"
+            src="public/assets/icons/bookmark-white.png"
+            data-js="bookmark"
+          />
+          <div class="question-box">
+            <h2 class="question-txt">A Question</h2>
+            <div class="choice-container">
+              <p class="choice">1. Choice</p>
+              <p class="choice">2. Choice</p>
+              <p class="choice">3. Choice</p>
+            </div>
+            <p class="answer-txt-unvisible" data-js="answer-txt">An Answer</p>
+            <button type="button" data-js="answer-button">
+              Reveal the Answer
+            </button>
+          </div>
+
+          <div class="category-container">
+            <p class="category-txt">#1 Category</p>
+            <p class="category-txt">#2 Category</p>
+            <p class="category-txt">#3 Category</p>
+          </div>
+        </article>
       </div>
     </main>
     <footer>
@@ -21,7 +45,7 @@
             <a href="#" title="Home">
               <img
                 class="menu-icon"
-                src="public/assets/icons/bookmark-black.png"
+                src="public/assets/icons/home-black.png"
                 alt="Home"
               />
             </a>
