Update Answer Button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <p class="choice">3. Choice</p>
             </div>
             <p class="answer-txt-unvisible" data-js="answer-txt">An Answer</p>
-            <button type="button" data-js="answer-button">
+            <button type="button" data-js="answer-button" class="answer-button">
               Reveal the Answer
             </button>
           </div>
