--- a/bookmarks.html
+++ b/bookmarks.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <header><h1>Quiz App - Bookmarks</h1></header>
-    <main>
+    <main class="background-main">
       <article class="question-container">
-        <img class="bookmark" src="../assets/bookmark-black.png" />
+        <!-- <img class="bookmark" src="../assets/bookmark-black.png" />
         <div class="question-box">
           <h2 class="question-txt">A Question</h2>
           <div class="choice-container">
@@ -24,7 +24,7 @@
           <p>#1Category</p>
           <p>#2Category</p>
           <p>#3Category</p>
-        </div>
+        </div> -->
       </article>
     </main>
     <footer>
