--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header><h1>Quiz App - User Page</h1></header>
-    <main>
+    <main class="background-main">
       <div class="user-header">
         <img class="profil-img" src="public/assets/icons/user-black.png" />
         <h2>User Name</h2>
