Design Profile Page

--- a/form.html
+++ b/form.html
@@ -151,7 +151,7 @@
               <label for="pop">Pop Culture</label>
             </div>
           </div>
-          <button type="submit" class="answer-button">Submit</button>
+          <button type="submit" class="submit-button">Submit</button>
         </form>
       </div>
     </main>
