--- a/profile.html
+++ b/profile.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <header><h1>Quiz App - User Page</h1></header>
-    <main class="background-main">
+    <main class="background-main profile-container">
       <div class="user-header">
-        <img class="profil-img" src="public/assets/icons/user-black.png" />
+        <img class="profil-img" src="public/assets/icons/user-white.png" />
         <h2>User Name</h2>
       </div>
       <div class="user-description">
