Update icons profile page

--- a/profile.html
+++ b/profile.html
@@ -25,13 +25,13 @@
         </p>
         <div class="counters-container">
           <div class="counter-box">
-            <img class="counter-icon" src="public/assets/icons/question.png" />
+            <img class="counter-icon" src="/public/assets/icons/question.png" />
             <p>12</p>
           </div>
           <div class="counter-box">
             <img
               class="counter-icon"
-              src="public/assets/icons/bookmark-black.png"
+              src="./public/assets/icons/bookmark-white.png"
             />
             <p>8</p>
           </div>
