--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <article class="question-container"></article>
       </div>
     </main>
+
     <footer>
+      <div class="white-space"></div>
       <nav>
         <ul class="menu">
           <li>
