--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/styles.css" />
-    <script src="./scripts/form.js" defer></script>
+    <script type="module" src="./scripts/form.js"></script>
     <title>Quiz App</title>
   </head>
   <body>
